# pycharm-ai-assistant-demo

./: .Dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.rst  build.sh  pyproject.toml
.github/workflows/: bump_version.yml  pre-commit.yml  pytest.yml
deploy/: package.sh
deploy/terraform/: cloudwatch.tf  iam.tf  lambda.tf  locals.tf  state.tf  vars.tf  vpc.tf
src/: app.py
tests/: test_app.py
