[tool.commitizen]
version = "0.2.2"
tag_format = "v$version"
version_files = [
  "pyproject.toml:version",
  "src/__init__.py",
]

[tool.poetry]
name = "lambda-python-template"
version = "0.2.2"
description = "Python Template for AWS Lambda Functions"
authors = ["kkmol <kieran.molloy@zuto.com>"]

[tool.poetry.dependencies]
python = "^3.9, <3.10"
boto3 = "^1.24.91"
botocore = "^1.27.91"
srsly = "^2.4.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
commitizen = "^2.35.0"
coverage = "^6.5.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "integtest: marks tests as integration (deselect with '-m \"not integtest\"')",
    "serial",
]
